Solucion temporal para los estados de compra